2008-07-17  Gavin SALAM  <salam@lpthe.jussieu.fr>

	* CmdLine.cc: 
	  added use of <cstdlib> for access to exit(...) [needed for
	  g++-4.3] 

2007-11-18  Gavin Salam  <salam@lpthe.jussieu.fr>

	* CmdLine.cc|hh: 
	  added assert_all_options_used()

2007-10-02  Gavin SALAM  <salam@lpthe.jussieu.fr>

	* configure.ac    *** ADDED ***
	* Makefile.am     *** ADDED ***
        * NEWS            *** ADDED ***
	  added these on way to getting a proper automake type system

2007-07-16  Gavin SALAM  <salam@lpthe.jussieu.fr>

	* CmdLine.cc|hh: 
	  added the unix_uname() member function.

2007-06-30  Gavin Salam  <salam@lpthe.jussieu.fr>

	* make-enum-IO.pl: 
	  added this perl file to help with automated generation of I/O
	  for enums -- does not quite have full flexibility yet
	  (e.g. enums inside classes), but should slowly get there.

	* CmdLine.hh: 

	  added CmdLine::value_prefix<T>(opt,prefix), which interprets
	  the value of opt by placing the prefix in front of it
	   
	  added CmdLine::value<T>(opt,default,prefix), which interprets
	  the value of opt by placing the prefix in front of it

	  Both can be useful when reading in enums that all share a common
	  prefix.

2007-05-18  Gavin SALAM  <salam@lpthe.jussieu.fr>

	* CmdLine.hh|cc
	  added time_stamp(...) and time_stamp_at_start(...) facilities
	  set int_val(...) to be const (had been missing).

2007-02-03  Gavin Salam  <salam@lpthe.jussieu.fr>

	* added files needed to turn this into a semi-proper release

	
